--- a/src/button/Button.stories.mdx
+++ b/src/button/Button.stories.mdx
@@ -27,6 +27,38 @@ import 'web-component-wheat-ui/dist/button'
     打开弹框
 </wheat-button>
 ```
+
+## 在 Vue 中使用
+
+```vue
+<template>
+  <div>
+    <wheat-button id="open" type="line" appearance="link" href="pp">
+      <span slot="icon">+</span>
+    打开弹框
+</wheat-button>
+  </div>
+</template>
+
+<script>
+import 'web-component-wheat-ui'
+
+export default {
+  data() {
+    return {
+      visiable: false
+    }
+  },
+  mounted() {
+    
+  },
+  methods: {
+    
+  }
+}
+</script>
+```
+
 ## Attribute
 
 | 参数       | 说明                                          | 类型    | 可选值                                                    | 默认值    |
