--- a/src/button/Button.stories.mdx
+++ b/src/button/Button.stories.mdx
@@ -1,5 +1,6 @@
-
+import {useState} from 'react'
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
+
 
 import { html } from 'lit-html';
 
@@ -9,13 +10,18 @@ import './index';
 
 export const Template = (args) => html`<wheat-button>button</wheat-button>`;
 
+
 <Canvas>
-  <Story name="Unchecked" args={{ 
-      label: 'Unchecked'
+  <Story name="基础使用" args={{ 
+      label: '基础使用'
     }}>
     {Template.bind({})}
    </Story>
 </Canvas>
+
+
+
+
 
 
 ## 在 React 中使用
@@ -30,7 +36,7 @@ import 'web-component-wheat-ui/dist/button'
 
 ## 在 Vue 中使用
 
-```vue
+```html
 <template>
   <div>
     <wheat-button id="open" type="line" appearance="link" href="pp">
