--- a/src/card/Card.stories.mdx
+++ b/src/card/Card.stories.mdx
@@ -8,7 +8,7 @@ import './index';
 
 <Meta title="Example/Card" />
 
-export const Template = (args) => html`<wheat-card>button</wheat-card>`;
+export const Template = (args) => html`<wheat-card title='标题'><div name='content'>内容</div></wheat-card>`;
 
 
 <Canvas>
@@ -22,48 +22,6 @@ export const Template = (args) => html`<wheat-card>button</wheat-card>`;
 
 
 
-
-
-## 在 React 中使用
-```js
-import 'web-component-wheat-ui/dist/button'
-
-<wheat-button id="open" type="line" appearance="link" href="pp">
-      <span slot="icon">+</span>
-    打开弹框
-</wheat-button>
-```
-
-## 在 Vue 中使用
-
-```html
-<template>
-  <div>
-    <wheat-button id="open" type="line" appearance="link" href="pp">
-      <span slot="icon">+</span>
-    打开弹框
-</wheat-button>
-  </div>
-</template>
-
-<script>
-import 'web-component-wheat-ui'
-
-export default {
-  data() {
-    return {
-      visiable: false
-    }
-  },
-  mounted() {
-    
-  },
-  methods: {
-    
-  }
-}
-</script>
-```
 
 ## Attribute
 
