--- a/src/radio/Radio.stories.mdx
+++ b/src/radio/Radio.stories.mdx
@@ -1,14 +1,10 @@
-import {useState} from 'react'
-import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-
-
-import { html } from 'lit-html';
+import { Meta, Story, Canvas } from '@storybook/addon-docs';
 
 import './index';
 
 <Meta title="Example/Radio" />
 
-export const Template = (args) => html`<wheat-radio name='radio1'>sfds</wheat-radio>`;
+export const Template = (args) => <wheat-radio name='radio1'>sfds</wheat-radio>;
 
 
 <Canvas>
