--- a/src/modal/Modal.stories.mdx
+++ b/src/modal/Modal.stories.mdx
@@ -1,4 +1,5 @@
 
+import {useState, useEffect} from "react";
 import { Meta, Story } from '@storybook/addon-docs';
 import './index';
 import '../button/index.js'
@@ -8,10 +9,34 @@ import '../button/index.js'
 <!-- 👇 We create a “template” of how args map to rendering -->
 
 export const Template = (args) => {
-  return <div>
-    <wheat-button>button</wheat-button>
-    <wheat-modal visible='false'>modal</wheat-modal>
-  </div>
+  const [visible, setvisible] = useState(false)
+  useEffect(() => {
+    const MyModalDom = document.querySelector('wheat-modal')
+    MyModalDom.addEventListener('onCancel', value => {
+      const {
+        detail: { visible }
+      } = value
+      console.log('触发取消方法')
+      setvisible(visible)
+    })
+    MyModalDom.addEventListener('onConfirm', value => {
+      console.log('触发确定方法')
+      setvisible(false)
+    })
+  }, [])
+  return (
+    <div className='App'>
+     <wheat-button onClick={() => {
+          setvisible(true)
+        }} id="open" type="line">
+      打开弹框
+    </wheat-button>
+    <wheat-modal title='title' visible={visible}>
+      <div slot='wheat-modal-close-icon'>close</div>
+      <div slot='content'>弹框内容</div>
+    </wheat-modal>
+    </div>
+  )
 };
 
 <!-- 👇 Each story then reuses that template -->
@@ -19,7 +44,7 @@ export const Template = (args) => {
   name="Primary"
   args={{
     primary: true,
-    label: 'Button',
+    children: 'Button',
   }}>
   {Template.bind({})}
 </Story>
