feat: #19 新增table 文档

--- a/src/table/Table.stories.mdx
+++ b/src/table/Table.stories.mdx
@@ -6,7 +6,7 @@ import { within, userEvent } from '@storybook/testing-library';
 
 import './index.js';
 
-<Meta title='基于react组件封装/Table' />
+<Meta title='Componentreact/Table' />
 
 <!-- 👇 We create a “template” of how args map to rendering -->
 
