feat:删除编辑表格调试代码

--- a/src/button/Button.stories.mdx
+++ b/src/button/Button.stories.mdx
@@ -4,7 +4,16 @@ import './index';
 
 <Meta title="Example/Button" />
 
-export const Template = (args) => <wheat-button>button</wheat-button>;
+export const Template = (args) => {
+  return (
+    <wheat-button>
+      button
+      <span slot="icon" class="tessss">
+        12
+      </span>
+      </wheat-button>
+    )
+};
 
 
 <Story
