--- a/src/modal/Modal.stories.mdx
+++ b/src/modal/Modal.stories.mdx
@@ -32,8 +32,8 @@ export const Template = (args) => {
       打开弹框
     </wheat-button>
     <wheat-modal title='title' visible={visible}>
-      <div slot='wheat-modal-close-icon'>close</div>
-      <div slot='content'>弹框内容</div>
+      <div slot='wheat-modal-close-icon'>X</div>
+      <div slot='content' className='modal-content'>弹框内容</div>
     </wheat-modal>
     </div>
   )
