--- a/src/table/Table.stories.mdx
+++ b/src/table/Table.stories.mdx
@@ -395,7 +395,7 @@ export default App;
 | filters                           | 表头的筛选菜单项                                                                                                                                                                             | object\[]                                                                                                                                                                           | -                      |                                |
 | fixed                             | （IE 下无效）列是否固定，可选 true (等效于 left) `left` `right`                                                                                                                              | boolean \| string                                                                                                                                                                   | false                  |                                |
 | key                               | React 需要的 key，如果已经设置了唯一的 `dataIndex`，可以忽略这个属性                                                                                                                         | string                                                                                                                                                                              | -                      |                                |
-| render                            | 生成复杂数据的渲染函数，参数分别为当前行的值，当前行数据，行索引                                                                                                                             | function(text, record, index) {}                                                                                                                                                    | -                      |                                |
+| render                            | 生成复杂数据的渲染函数，参数分别为当前行的值，当前行数据，行索引                                                                                                                             | function(text, record, index) => [RenderComponent](#rendercomponent)                                                                                                                                                    | -                      |                                |
 | responsive                        | 响应式 breakpoint 配置列表。未设置则始终可见。                                                                                                                                               | [Breakpoint](https://github.com/ant-design/ant-design/blob/015109b42b85c63146371b4e32b883cf97b088e8/components/_util/responsiveObserve.ts#L1)\[]                                    | -                      | 4.2.0                          |
 | shouldCellUpdate                  | 自定义单元格渲染时机                                                                                                                                                                         | (record, prevRecord) => boolean                                                                                                                                                     | -                      | 4.3.0                          |
 | showSorterTooltip                 | 表头显示下一次排序的 tooltip 提示, 覆盖 table 中 `showSorterTooltip`                                                                                                                         | boolean \| [Tooltip props](/components/tooltip/#API)                                                                                                                                | true                   |                                |
@@ -408,6 +408,14 @@ export default App;
 | onFilter                          | 本地模式下，确定筛选的运行函数                                                                                                                                                               | function                                                                                                                                                                            | -                      |                                |
 | onFilterDropdownOpenChange        | 自定义筛选菜单可见变化时调用                                                                                                                                                                 | function(visible) {}                                                                                                                                                                | -                      |                                |     |
 | onHeaderCell                      | 设置头部单元格属性                                                                                                                                                                           | function(column)                                                                                                                                                                    | -                      |                                |
+
+### RenderComponent
+
+| 参数  | 说明         | 类型      | 默认值 |
+| ----- | ------------ | --------- | ------ |
+| componentName | antd中组件名称 | string | null |
+| type | 元素类型（div、span） | string | div |
+| ...other | 相关组件或者元素的配置 | [key]: any |  |
 
 ### ColumnGroup
 
