修改table 中reader属性

--- a/src/table/Table.stories.mdx
+++ b/src/table/Table.stories.mdx
@@ -38,6 +38,13 @@ export const Template = (args) => {
         title: 'Address',
         dataIndex: 'address',
         key: 'address',
+        render: (text, row) => {
+          console.log('----row', row);
+          return {
+            tagName: 'span',
+            children: '123213'
+          };
+        },
       },
       {
         title: '编辑列',
